--- a/templates/addcategory.html
+++ b/templates/addcategory.html
@@ -4,7 +4,7 @@
 <section>
 <h3>Add Category</h3>
 <div class="row">
-    <form action="{{ url_for('insert_category' }}" method="POST" class="col s12">
+    <form action="{{ url_for('insert_category') }}" method="POST" class="col s12">
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">poll</i>
