--- a/templates/random.html
+++ b/templates/random.html
@@ -80,8 +80,8 @@
         </div>
     </div>
 
-    <div class="center-align">
-        <a href="{{ url_for('get_tasks') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>See more!</a>
+    <div class="center-align random-end-btn">
+        <a href="{{ url_for('get_tasks') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>See more</a>
     </div>
 
 </section>
