--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,46 +1,47 @@
 {% extends 'base.html'%} {% block content %}
-
-<div class="row">
-    <!--category heading section -->
-    <div class="container random">
-        <div class="row center-align">
-            <div class="index-bg">
-                <h4 class="random-header"><span class="white-text">Categories</span></h4>
-            </div>
-            <div class="cat_text">
-                <h5>You can add your own Category or edit one that is already here</h5>
+<section>
+    <div class="row">
+        <!--category heading section -->
+        <div class="container random">
+                <div class="row center-align">
+                    <div class="index-bg">
+                        <h4 class="random-header"><span class="white-text">Categories</span></h4>
+                    </div>
+                    <div class="cat_text">
+                        <h5>You can edit the existing Categories or add a new one!</h5>
+                    </div>
+                </div>
+            <!--add category button -->
+            <div class="row">
+                <ul class="collapsible" data-collapsible="accordion">
+                    {% for category in categories %}
+                    <li>
+                        <div class="collapsible-header">
+                            <div class="task_header col s9">
+                                <strong>{{category.category_name}}</strong>
+                            </div>
+                            <a href="{{ url_for('edit_category', category_id=category._id) }}" class="waves-effect waves-light btn btn_small blue">Edit</a>
+                            <a href="{{ url_for('delete_category', category_id=category._id) }}" class="waves-effect waves-light btn btn_small">Del</a>
+                        </div>
+                    </li>
+                    {% endfor %}
+                </ul>
             </div>
         </div>
+        <!--add category button -->
+        <div class="row center-align">
+            <a href="{{ url_for('add_category') }}" class="waves-effect waves-light btn">
+                <i class="material-icons right">add</i>Add Category
+            </a>
+        </div>
+        <div class="center-align">
+            <div>
+                <img src="static/img/ram-emoji.png" alt="emoji of a ram/male sheep" class="responsive-img">
+            </div>
+            <br>
+            <h6><span class="orange-text"><i class="material-icons prefix">star_border</i>things that make you hmmm hmmm hmmm<i class="material-icons prefix">star_border</i></span></h6>
+            <br>
+        </div>
     </div>
-    <!--add category button -->
-    <div class="row">
-        <ul class="collapsible" data-collapsible="accordion">
-            {% for category in categories %}
-            <li>
-                <div class="collapsible-header">
-                    <div class="task_header col s9">
-                        <strong>{{category.category_name}}</strong>
-                    </div>
-                    <a href="{{ url_for('edit_category', category_id=category._id) }}" class="waves-effect waves-light btn btn_small blue">Edit</a>
-                    <a href="{{ url_for('delete_category', category_id=category._id) }}" class="waves-effect waves-light btn btn_small">Del</a>
-                </div>
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
-</div>
-<!--add category button -->
-<div class="row center-align">
-    <a href="{{ url_for('add_category') }}" class="waves-effect waves-light btn">
-        <i class="material-icons right">add</i>Add Category
-    </a>
-</div>
-<div class="center-align">
-    <div>
-        <img src="static/img/ram-emoji.png" alt="emoji of a ram/male sheep" class="responsive-img">
-    </div>
-    <br>
-    <h6><span class="orange-text"><i class="material-icons prefix">star_border</i>things that make you hmmm hmmm hmmm<i class="material-icons prefix">star_border</i></span></h6>
-    <br>
-</div>
+</section>
 {% endblock %}
