--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,7 +117,6 @@ body {
 .random-cat {
     font-weight: bold;
     padding-top: 20px;
-    padding-bottom: 20px;
 }
 
 .grow:hover {
@@ -126,7 +125,15 @@ body {
     transform: scale(1.05);
 }
 
+.add-star i {
+    padding-top: 0px;
+}
 
+.add_ram_btn {
+    background-color: #eceff1;
+    margin-bottom: 20px;
+    padding: 10px;
+}
 /***category.html***/
 .cat_text {
     padding: 20px;
