--- a/templates/categories.html
+++ b/templates/categories.html
@@ -34,6 +34,7 @@
                 <i class="material-icons right">add</i>Add Category
             </a>
         </div>
+        <!--add go to tasks button -->
         <div class="center-align">
             <div>
                 <img src="static/img/ram-emoji.png" alt="emoji of a ram/male sheep" class="responsive-img">
