--- a/templates/base.html
+++ b/templates/base.html
@@ -26,10 +26,10 @@
 
             </ul>
              <ul class="side-nav" id="mobile-demo">
-                <li><a href="{{ url_for('get_index') }}">Home</a></li>
-                <li><a href="{{ url_for('random') }}">RAM</a></li>
+                <li><a href="{{ url_for('random') }}"><span class="orange-text">RAM</span></a></li>
                 <li><a href="{{ url_for('add_ram') }}"><span class="orange-text">Add your 5</span></a></li>
-                <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
+                <li><a href="{{ url_for('get_categories') }}"><span class="orange-text">Add Category</span></a></li>
+                <li><a href="{{ url_for('about') }}"><span class="orange-text">About</span></a></li>
             </ul>
             </div>
         </nav>
