--- a/templates/random.html
+++ b/templates/random.html
@@ -9,7 +9,7 @@
             </div>
             <div class="center-align random-text">
                 <img src="static/img/ram-emoji.png" alt="emoji of a ram/male sheep" class=" responsive-img">
-                <p>(Random Acts of Mindfullness)</p>
+                <p>(Random Acts of Mindfullness - RAM)</p>
                 <h5>You can browse through our RAMs below or you can start adding your own!</h5>
             </div>
                 <div class="center-align random-btn">
