Create viewtasks page

--- a/templates/random.html
+++ b/templates/random.html
@@ -45,7 +45,7 @@
                 <div class="card medium grow">
                     <div class="card-image">
                         <div class="card-img">
-                            <img class="responsive-img" src="static/img/penguin.png" alt="Poster for Avengers: Endgame">
+                            <img class="responsive-img" src="static/img/penguin.png" alt="cartoon penguin">
                         </div>
                         <span class="card-title center-align">5 Sights</span>
                     </div>
@@ -63,7 +63,7 @@
                 <div class="card medium grow">
                     <div class="card-image">
                         <div class="card-img">
-                            <img class="responsive-img" src="static/img/bunny.png" alt="Poster for Abominable">
+                            <img class="responsive-img" src="static/img/bunny.png" alt="cartoon rabbit">
                         </div>
                         <span class="card-title">5 fun Facts about Rabbits!</span>
                     </div>
