--- a/templates/viewtasks.html
+++ b/templates/viewtasks.html
@@ -1,15 +1,82 @@
 {% extends 'base.html'%} {% block content %}
 <section>
     <div class="container">
+        <!----view tasks heading-->
          <div class="row center-align">
              <div class="index-bg">
                 <h4 class="random-header"><span class="white-text">FIVE</span></h4>
             </div>
              <div class="cat_text">
-                <h5>You can edit the existing FIVES here</h5>
+                <h5>Browse through our FIVEs</h5>
             </div>
         </div>
-    </div>
-    
+
+ <!----view tasks cards-->
+
+        <div id="random-tasks" class="row flex">
+            <div class="col l6 xl4">
+                <div class="card medium grow">
+                    <div class="card-image">
+                        <div class="card-img">
+                            <img class="responsive-img" src="static/img/owl.png" alt="cartoon owl">
+                        </div>
+                        <span class="card-title center-align">5 Senses</span>
+                    </div>
+                    <div class="card-content">
+                        <p><span class="number">5 </span>  things you see </p>
+                        <p><span class="number">4 </span>  things you hear </p>
+                        <p><span class="number">3 </span>  things you smell </p>
+                        <p><span class="number">2 </span>  things you can touch</p>
+                        <p><span class="number">1 </span>  thing you taste </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col l6 xl4">
+                <div class="card medium grow">
+                    <div class="card-image">
+                        <div class="card-img">
+                            <img class="responsive-img" src="static/img/penguin.png" alt="cartoon penguin">
+                        </div>
+                        <span class="card-title center-align">5 Sights</span>
+                    </div>
+                    <div class="card-content">
+                        <p><span class="number">5 </span>  colors </p>
+                        <p><span class="number">4 </span>  shapes </p>
+                        <p><span class="number">3 </span>  soft things </p>
+                        <p><span class="number">2 </span>  people</p>
+                        <p><span class="number">1 </span>  book </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col l6 xl4">
+                <div class="card medium grow">
+                    <div class="card-image">
+                        <div class="card-img">
+                            <img class="responsive-img" src="static/img/bunny.png" alt="cartoon rabbit">
+                        </div>
+                        <span class="card-title">5 fun Facts about Rabbits!</span>
+                    </div>
+                    <div class="card-content">
+                        <p><span class="number">1.</span> A female is called a doe</p>
+                        <p><span class="number">2.</span> A male is called a buck</p>
+                        <p><span class="number">3.</span> A baby is called a kit or kitten</p>
+                        <p><span class="number">4.</span> Live for up to 10 years</p>
+                        <p><span class="number">5.</span> Ears as long as a pencil</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div> 
+                <div class="add_ram_btn center-align">
+                <span class="indigo-text add-star"><i class="medium material-icons stars">stars</i></span>
+                <h6><strong>You can add your own FIVE to our collection. <br><br>Think of 5 things you think, do or say, that always make you smile</strong></h6>
+                <div class="index-btn">
+                    <a href="{{ url_for('add_ram') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>Add to five</a>
+                </div>
+            </div>
 </section>
 {% endblock %}
