Styling tasks list on viewtasks page

--- a/templates/viewtasks.html
+++ b/templates/viewtasks.html
@@ -15,9 +15,9 @@
             <ul>
                 {% for task in tasks %}
                 <li class="col l6 xl4">
-                    <div class="card small grow center-align">                      
-                         <div class="card-title indigo white-text">
-                            <strong>{{task.task_name}}</strong>
+                    <div class="card grow center-align">                      
+                         <div class="card-title indigo lighten-1 white-text">
+                            {{task.task_name}}
                         </div>
                          <div class="card-content">
                         <span>
