Fixed link errrors

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -5,7 +5,7 @@
     <!--tasks heading section -->
                     <div class="row center-align">
                     <div class="index-bg">
-                        <h4 class="random-header"><span class="white-text">Edit your 5</span></h4>
+                        <h4 class="random-header"><span class="white-text">Edit FIVE!</span></h4>
                     </div>
                     <div class="cat_text">
                         <h5>You can edit the existing FIVES here</h5>
