--- a/templates/random.html
+++ b/templates/random.html
@@ -81,7 +81,7 @@
     </div>
 
     <div class="center-align random-end-btn">
-        <a href="{{ url_for('get_tasks') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>See more</a>
+        <a href="{{ url_for('viewtasks') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>See more</a>
     </div>
 
 </section>
