checking functionality CRUD operations

--- a/templates/viewtasks.html
+++ b/templates/viewtasks.html
@@ -4,10 +4,10 @@
         <!----view tasks heading-->
          <div class="row center-align">
              <div class="index-bg">
-                <h4 class="random-header"><span class="white-text">FIVE</span></h4>
+                <h4 class="random-header"><span class="white-text">Our FIVE</span></h4>
             </div>
              <div class="cat_text">
-                <h5>Browse through our FIVEs</h5>
+                <h6>Browse through our FIVEs, see what you like. <br><br> Come up with new ones and click the button below to add your own!</h6>
             </div>
         </div>
 <!----view tasks list-->
