Adding section and link to get tasks page

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,8 @@
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons"><span class="orange-text">menu</span></i></a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('random') }}"><span class="orange-text">RAM</span></a></li>
-                    <li><a href="{{ url_for('add_ram') }}"><span class="orange-text">Add your 5</span></a></li>
+                    <li><a href="{{ url_for('viewtasks') }}"><span class="orange-text">Our 5</span></a></li>
+                    <li><a href="{{ url_for('add_ram') }}"><span class="orange-text">Your 5</span></a></li>
                     <li><a href="{{ url_for('get_categories') }}"><span class="orange-text">Add new Category</span></a></li>
                     <li><a href="{{ url_for('about') }}"><span class="orange-text">About</span></a></li>
 
