--- a/templates/random.html
+++ b/templates/random.html
@@ -13,7 +13,7 @@
                 <h5>You can browse through our RAMs below or you can start adding your own!</h5>
             </div>
                 <div class="center-align random-btn">
-        <a href="{{ url_for('add_ram') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>Add your own RAM</a>
+        <a href="{{ url_for('add_ram') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>Add your own 5</a>
     </div>
         </div>
     </div>
@@ -81,7 +81,7 @@
     </div>
 
     <div class="center-align random-end-btn">
-        <a href="{{ url_for('viewtasks') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>See more</a>
+        <a href="{{ url_for('viewtasks') }}" class="waves-effect waves-light btn"><i class="material-icons right">call_made</i>See Our 5</a>
     </div>
 
 </section>
