Resizing images in random page

--- a/templates/random.html
+++ b/templates/random.html
@@ -23,11 +23,11 @@
         <!--random categories section -->
 
         <div id="random-tasks" class="row flex">
-            <div class="col l6 xl4">
+            <div class="col s12 m4">
                 <div class="card medium grow">
                     <div class="card-image">
                         <div class="card-img">
-                            <img class="responsive-img" src="static/img/owl.png" alt="cartoon owl">
+                            <img class="responsive-img" src="static/img/tiger.png" alt="tiger">
                         </div>
                         <span class="card-title center-align">5 Senses</span>
                     </div>
@@ -41,11 +41,11 @@
                 </div>
             </div>
 
-            <div class="col l6 xl4">
+            <div class="col s12 m4">
                 <div class="card medium grow">
                     <div class="card-image">
                         <div class="card-img">
-                            <img class="responsive-img" src="static/img/penguin.png" alt="cartoon penguin">
+                            <img class="responsive-img" src="static/img/owl.png" alt="owl">
                         </div>
                         <span class="card-title center-align">5 Sights</span>
                     </div>
@@ -59,11 +59,11 @@
                 </div>
             </div>
 
-            <div class="col l6 xl4">
+            <div class="col s12 m4">
                 <div class="card medium grow">
                     <div class="card-image">
                         <div class="card-img">
-                            <img class="responsive-img" src="static/img/bunny.png" alt="cartoon rabbit">
+                            <img class="responsive-img" src="static/img/rabbit.png" alt="rabbit">
                         </div>
                         <span class="card-title">5 fun Facts about Rabbits!</span>
                     </div>
